--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,9 @@ body {
     text-align: right;
     width: 140px;
     padding-top: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .menu-opcoes ul {
@@ -29,4 +32,13 @@ body {
 
 .menu-opcoes a {
     color: #003366;
+}
+
+header {
+    position: relative;
+}
+.menu-opcoes{
+    position: relative;
+    bottom: 0;
+    right: 0;
 }
